force-app/main/default/objects/Cap__c.object
<CustomObject>
    <fields>
        <fullName>Academic_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Academic Program for the Cap</description>
        <label>Academic Program</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Academic Program</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Caps</relationshipLabel>
        <relationshipName>Caps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cap__c</fullName>
        <description>The enrollment cap</description>
        <label>Cap</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Enrolled_Students_Roll_Up__c</fullName>
        <label>Enrolled Students Roll Up</label>
        <summarizedField>Cap_Grade_Level__c.Number_of_Enrolled_Students__c</summarizedField>
        <summaryForeignKey>Cap_Grade_Level__c.Cap__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Cap</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Cap Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Caps</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>